--- a/distribuidora-api/src/main/resources/application.properties
+++ b/distribuidora-api/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.servlet.contextPath=/api
+
 
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
@@ -7,3 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost:5432/distribuidora}
 spring.datasource.username=${POSTGRES_USER:postgres}
 spring.datasource.password=${POSTGRES_PASSWORD:postgres}
+
+auth0.audience=http://localhost:8080
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-ail8x0n8.us.auth0.com/
