Ajustando busca de produtos

--- a/distribuidora-api/src/main/resources/application.properties
+++ b/distribuidora-api/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 ## PostgreSQL configuration
 spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost:5432/distribuidora}
 spring.datasource.username=${POSTGRES_USER:postgres}
