Novos ajustes no fluxo principal e atualizaçao do status do pedido

--- a/distribuidora-api/src/main/resources/application.properties
+++ b/distribuidora-api/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.servlet.contextPath=/api
-
+server.port=5000
 
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
@@ -12,6 +12,11 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost:5432/distribuidora}
 spring.datasource.username=${POSTGRES_USER:postgres}
 spring.datasource.password=${POSTGRES_PASSWORD:postgres}
+
+#spring.datasource.url=jdbc:postgresql://distribuidora.ccoyvgold52p.us-east-1.rds.amazonaws.com:5432/distribuidora
+#spring.datasource.username=postgres
+#spring.datasource.password=distribuidora
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 auth0.audience=http://localhost:8080
 
