--- a/distribuidora-api/src/main/resources/application.properties
+++ b/distribuidora-api/src/main/resources/application.properties
@@ -9,9 +9,18 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 ## PostgreSQL configuration
-spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost:5432/distribuidora}
-spring.datasource.username=${POSTGRES_USER:postgres}
-spring.datasource.password=${POSTGRES_PASSWORD:postgres}
+#spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost:5432/distribuidora}
+#spring.datasource.username=${POSTGRES_USER:postgres}
+#spring.datasource.password=${POSTGRES_PASSWORD:postgres}
+
+spring.datasource.url=jdbc:h2:mem:distribuidora
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.defer-datasource-initialization=true
+spring.h2.console.enabled=true
 
 #spring.datasource.url=jdbc:postgresql://distribuidora.ccoyvgold52p.us-east-1.rds.amazonaws.com:5432/distribuidora
 #spring.datasource.username=postgres
